--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">AppMOBV</string>
-    <string name="fill_wine_glass">Fill wine glass</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="form_title">Zadajte údaje</string>
@@ -9,4 +8,10 @@
     <string name="business_latitude_input">Zadajte zem. šírku podniku</string>
     <string name="business_altitude_input">Zadajte zem. dĺžku podniku</string>
     <string name="confirm">Potvrdiť</string>
+
+
+    <string name="name">Name</string>
+    <string name="business_title">Podnik</string>
+    <string name="fill_wine_glass">Naplň vínový pohár</string>
+    <string name="open_gps">Ukáž na mape</string>
 </resources>
